# Tx-Validator

./: .gitignore  Cargo.toml  README.md  code.txt  dummy_p2sh.txt  locktime.txt  locktime_non0_.txt  main.py  output.txt  output2.txt  p2pkh.txt  p2sh-p2wpkh.txt  p2sh-p2wsh.txt  p2sh.txt  p2sh_____.txt  p2sh_non-segwit.txt  p2tr_1_anomaly.txt  p2wsh_anomaly.txt  run.sh  sequence_anomaly.txt  solution.md  wtxids.txt
.github/workflows/: classroom.yml
src/: error.rs  main.rs  transaction.rs  tx.rs
src/block_mine/: block.rs  merkle_root.rs  mod.rs  serialise_tx.rs
src/validation_checks/: mod.rs  p2pkh.rs  p2sh.rs  p2wpkh.rs  p2wsh.rs
