[package]
name = "code-challenge-2024-lla-dane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
glob = "0.3.1"
hex = "0.4.3"
log = "0.4.21"
ripemd = "0.1.3"
ripemd160 = "0.10.0"
secp256k1 = "0.28.2"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
sha2 = "0.10.8"
walkdir = "2.5.0"
